syntax = "proto3";
package example;
option go_package = "/;example";

service ExampleService {
    rpc SayHello(HelloRequest) returns(HelloResponse) {}
    rpc Sum(SumRequest) returns(SumResponse) {}
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

message SumRequest {
    int64 num1 = 1;
    int64 num2 = 2;
}

message SumResponse {
    int64 result = 1;
}
